# birdie

./: .editorconfig  .env.example  Cargo.toml  README.md
auth/: Cargo.toml
auth/src/: bearer_token.rs  lib.rs  main.rs  pre_generated_access_token.rs
bookmarks_api/: Cargo.toml
lists_api/: Cargo.toml
oauth2_server/: Cargo.toml
oauth2_server/src/: main.rs
spaces_api/: Cargo.toml
tweet_api/: Cargo.toml
twitter_api/: Cargo.toml
twitter_api/src/: lists_api.rs  main.rs  spaces_api.rs  tweet_api.rs
