[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[lib]
name = "birdie_auth"
path = "./src/lib.rs"

[dependencies]
actix-web = "4"
anyhow = "1.0.58"
base64 = "0.13.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"
reqwest = { version = "0.11.11", features = ["json"] }
serde = {version="1", default-features = false, features=["derive"]}
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
twitter-v2 = "0.1.6"
url = "2.2.2"
urlencoding = "2.1.0"
