[package]
name = "tweet_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
egg-mode = "0.16.0"
reqwest = { version = "0.11.11", features = ["json"] }
serde = {version="1", default-features = false, features=["derive"]}
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
